Better Language Service

--- a/apps/angular/src/app/views/finance/components/payments/components/component.html
+++ b/apps/angular/src/app/views/finance/components/payments/components/component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'changePayments.title' | translate"></span>
+        <span class="title" [innerText]="'finance-payments.title' | translate"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'changePayments.description' | translate"></span>
+        <span class="description" [innerText]="'finance-payments.description' | translate"></span>
         <mat-form-field class="input-container">
             <input matInput type="text">
         </mat-form-field>
