--- a/apps/angular/src/app/views/finance/components/payments/components/component.tns.html
+++ b/apps/angular/src/app/views/finance/components/payments/components/component.tns.html
@@ -1,6 +1,4 @@
 <GridLayout rows="auto,auto">
-    <Label class="h1 title"
-        [text]="'changePayments.title' | translate"></Label>
-    <Label class="p description" textWrap="true" row="1"
-        [text]="'changePayments.description' | translate"></Label>
+    <Label class="h1 title" [text]="'changePayments.title'"></Label>
+    <Label class="p description" textWrap="true" row="1" [text]="'changePayments.description'"></Label>
 </GridLayout>
