--- a/apps/angular/src/app/components/menu/components/menu/component.tns.phone.html
+++ b/apps/angular/src/app/components/menu/components/menu/component.tns.phone.html
@@ -1,4 +1,4 @@
 <StackLayout orientation="horizontal">
     <agora-menu-item *ngFor="let item of items" [item]="item"></agora-menu-item>
-    <Label [text]="'phone.edition' | translate"></Label>
+    <Label [text]="'phone.edition'"></Label>
 </StackLayout>
