--- a/apps/angular/src/app/views/about/components/about/component.tns.html
+++ b/apps/angular/src/app/views/about/components/about/component.tns.html
@@ -1,6 +1,4 @@
 <GridLayout rows="auto,auto">
-    <Label class="h1 title"
-        [text]="'about.title' | translate"></Label>
-    <Label class="p description" textWrap="true" row="1"
-        [text]="'about.description' | translate"></Label>
+    <Label class="h1 title" [text]="'about.title'"></Label>
+    <Label class="p description" textWrap="true" row="1" [text]="'about.description'"></Label>
 </GridLayout>
