--- a/apps/angular/src/app/views/claims/components/create/component.html
+++ b/apps/angular/src/app/views/claims/components/create/component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'claims-create.title' | translate"></span>
+        <span class="title" [innerText]="'claims-create.title'"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'claims-create.description' | translate"></span>
+        <span class="description" [innerText]="'claims-create.description'"></span>
         <mat-form-field class="input-container">
             <input matInput type="text">
         </mat-form-field>
