--- a/apps/angular/src/app/views/login/components/login/component.html
+++ b/apps/angular/src/app/views/login/components/login/component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'login.title' | translate"></span>
+        <span class="title" [innerText]="'login.title'"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'login.description' | translate"></span>
+        <span class="description" [innerText]="'login.description'"></span>
         <mat-form-field class="input-container">
             <input matInput type="text" placeholder="User name">
         </mat-form-field>
