--- a/apps/angular/src/app/views/login/components/register/component.html
+++ b/apps/angular/src/app/views/login/components/register/component.html
@@ -1,12 +1,11 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'register.title' | translate"></span>
+        <span class="title" [innerText]="'register.title'"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'register.description' | translate"></span>
+        <span class="description" [innerText]="'register.description'"></span>
         <mat-form-field class="input-container">
             <input matInput type="text" placeholder="Policy name">
         </mat-form-field>
     </mat-card-content>
 </mat-card>
-
