--- a/apps/angular/src/app/views/finance/components/payments/components/component.html
+++ b/apps/angular/src/app/views/finance/components/payments/components/component.html
@@ -1,10 +1,9 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'FinancePayments.Title' | xlate"></span>
+        <span class="title" [innerText]="'FinancePayments.Title' | translate"></span>
     </mat-card-title>
     <mat-card-content>
-        {{'FinancePayments.Description' | xlate}}
-        <span class="description" [innerText]="'FinancePayments.Description'"></span>
+        <span class="description" [innerText]="'FinancePayments.Description' | translate"></span>
         <mat-form-field class="input-container">
             <input matInput type="text">
         </mat-form-field>
