--- a/apps/angular/src/app/components/menu/components/menu-item/component.html
+++ b/apps/angular/src/app/components/menu/components/menu-item/component.html
@@ -1,1 +1,1 @@
-<a mat-list-item *ngIf="item" [routerLink]="item.url" [routerLinkActive]="'active'" [innerText]="item.description"></a>
+<a mat-list-item *ngIf="item" [routerLink]="item.url" [routerLinkActive]="'active'" [innerText]="item.description | translate"></a>
