--- a/apps/angular/src/app/views/about/components/about/component.html
+++ b/apps/angular/src/app/views/about/components/about/component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'about.title'"></span>
+        <span class="title" [innerText]="'About.Title' | translate"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'about.description'"></span>
+        <span class="description" [innerText]="'About.Description' | translate"></span>
         <mat-form-field class="input-container">
             <input matInput type="text">
         </mat-form-field>
