--- a/apps/angular/src/app/views/claims/components/create/component.tns.html
+++ b/apps/angular/src/app/views/claims/components/create/component.tns.html
@@ -1,4 +1,4 @@
 <GridLayout rows="auto,auto">
-    <Label class="h1 title" [text]="'claims.title'"></Label>
-    <Label class="p description" textWrap="true" row="1" [text]="'claims.description'"></Label>
+    <Label class="h1 title" [text]="'Claims.Create.Title' | translate"></Label>
+    <Label class="p description" textWrap="true" row="1" [text]="'Claims.Create.Description' | translate"></Label>
 </GridLayout>
