--- a/apps/angular/src/app/views/finance/components/payments/components/component.html
+++ b/apps/angular/src/app/views/finance/components/payments/components/component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'FinancePayments.Title' | translate"></span>
+        <span class="title" [innerText]="'Finance.Payments.Title' | translate"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'FinancePayments.Description' | translate"></span>
+        <span class="description" [innerText]="'Finance.Payments.Description' | translate"></span>
         <mat-form-field class="input-container">
             <input matInput type="text">
         </mat-form-field>
