--- a/apps/angular/src/app/views/home/components/home/component.html
+++ b/apps/angular/src/app/views/home/components/home/component.html
@@ -1,8 +1,8 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'home.title'"></span>
+        <span class="title" [innerText]="'Home.Title' | translate"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'home.description'"></span>
+        <span class="description" [innerText]="'Home.Description' | translate"></span>
     </mat-card-content>
 </mat-card>
