--- a/apps/angular/src/app/views/finance/components/resubs/components/component.html
+++ b/apps/angular/src/app/views/finance/components/resubs/components/component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'FinanceResubmissions.Title' | translate"></span>
+        <span class="title" [innerText]="'Finance.Resubmissions.Title' | translate"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'FinanceResubmissions.Description' | translate"></span>
+        <span class="description" [innerText]="'Finance.Resubmissions.Description' | translate"></span>
         <mat-form-field class="input-container">
             <input matInput type="text">
         </mat-form-field>
