--- a/apps/angular/src/app/views/login/components/login/component.html
+++ b/apps/angular/src/app/views/login/components/login/component.html
@@ -1,11 +1,11 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'login.title'"></span>
+        <span class="title" [innerText]="'User.Login.Title' | translate"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'login.description'"></span>
+        <span class="description" [innerText]="'User.Login.Description' | translate"></span>
         <mat-form-field class="input-container">
-            <input matInput type="text" placeholder="User name">
+            <input matInput type="text" placeholder="{{'User.Login.Title' | translate}}">
         </mat-form-field>
     </mat-card-content>
 </mat-card>
