--- a/apps/angular/src/app/views/login/components/register/component.html
+++ b/apps/angular/src/app/views/login/components/register/component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-title>
-        <span class="title" [innerText]="'register.title'"></span>
+        <span class="title" [innerText]="'User.Registration.Title' | translate"></span>
     </mat-card-title>
     <mat-card-content>
-        <span class="description" [innerText]="'register.description'"></span>
+        <span class="description" [innerText]="'User.Registration.Description' | translate"></span>
         <mat-form-field class="input-container">
             <input matInput type="text" placeholder="Policy name">
         </mat-form-field>
