--- a/apps/angular/src/app/components/menu/components/menu-item/component.html
+++ b/apps/angular/src/app/components/menu/components/menu-item/component.html
@@ -1,1 +1,6 @@
-<a mat-list-item *ngIf="item" [routerLink]="item.url" [routerLinkActive]="'active'" [innerText]="item.description | translate"></a>
+<a mat-list-item *ngIf="item && ![].constructor.isArray(item)" [routerLink]="item.url" [routerLinkActive]="'active'"
+    [innerText]="item.description | translate"></a>
+
+<span *ngIf="item && [].constructor.isArray(item)">
+    <a mat-list-item *ngFor="let subItem of item" [routerLink]="subItem.url" [routerLinkActive]="'active'" [innerText]="subItem.description | translate"></a>
+</span>
