--- a/apps/angular/src/app/app.component.html
+++ b/apps/angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <agora-header (drawerToggle)="drawer.toggle()"></agora-header>
 <mat-sidenav-container>
     <mat-sidenav #drawer mode="over" role="navigation">
-        <agora-menu (click)="drawer.toggle()" [items]="menuItems"></agora-menu>
+        <agora-menu [items]="menuItems"></agora-menu>
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-grid-list cols="1" rowHeight="1:1" class="container">
