--- a/apps/angular/src/app/components/menu/components/menu-item/component.html
+++ b/apps/angular/src/app/components/menu/components/menu-item/component.html
@@ -1,6 +1,4 @@
-<a mat-list-item *ngIf="item && ![].constructor.isArray(item)" [routerLink]="item.url" [routerLinkActive]="'active'"
+<a side-nav-item [routerLink]="item.url" [routerLinkActive]="'active'" *ngIf="![].constructor.isArray(item)"
     [innerText]="item.description | translate"></a>
 
-<span *ngIf="item && [].constructor.isArray(item)">
-    <a mat-list-item *ngFor="let subItem of item" [routerLink]="subItem.url" [routerLinkActive]="'active'" [innerText]="subItem.description | translate"></a>
-</span>
+<div side-nav-group title="submenu 4"></div>
