--- a/apps/angular/src/app/app.component.html
+++ b/apps/angular/src/app/app.component.html
@@ -1,6 +1,10 @@
 <agora-header (drawerToggle)="drawer.toggle()"></agora-header>
 <mat-sidenav-container>
     <mat-sidenav #drawer mode="over" role="navigation">
+        <div md-toolbar>
+            <h1 class="md-toolbar-tools">Disabled Close Events</h1>
+        </div>
+          
         <agora-menu [items]="menuItems"></agora-menu>
     </mat-sidenav>
     <mat-sidenav-content>
