--- a/apps/angular/src/assets/styles/styles.scss
+++ b/apps/angular/src/assets/styles/styles.scss
@@ -147,3 +147,30 @@ snack-bar-container {
         background-color: white !important;
     }
 }
+
+agora-menu {
+    .mat-accordion {
+        .mat-expansion-panel {
+            box-shadow: none;
+            
+
+            .mat-expansion-panel-header {
+                padding: 0 1rem;
+                height: 3rem!important;
+                border-bottom: solid 0.03rem rgba(0,0,0,.12);
+            }
+
+            .mat-expansion-panel-content {
+                box-shadow: none;
+                
+                .mat-expansion-panel-body {
+                    padding: 0;
+                    a {
+                        padding: 1rem 1rem 1rem 1.5rem;
+                        border-bottom: solid 0.03rem rgba(0,0,0,.12);
+                    }
+                }
+            }
+        }
+    }
+}
