--- a/apps/angular/src/app/components/menu/components/menu/component.html
+++ b/apps/angular/src/app/components/menu/components/menu/component.html
@@ -1,3 +1,7 @@
+<mat-toolbar>
+    <h1 class="md-toolbar-tools">Disabled Close Events</h1>
+</mat-toolbar>
+
 <agora-menu-item *ngFor="let item of menuItems(items, false)" [item]="item"></agora-menu-item>
 
 <mat-accordion multi="true" displayMode="flat" *ngFor="let item of menuItems(items, true)">
