--- a/apps/angular/src/assets/styles/styles.scss
+++ b/apps/angular/src/assets/styles/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/theming';
-@import './mixins', './loading';
+@import 'mixins', 'loading';
 
 @include mat-core();
 
@@ -14,6 +14,7 @@ $agora-app-theme: mat-light-theme(
 );
 
 @include angular-material-theme($agora-app-theme);
+
 body {
     @include font-roboto(16px, $text--color);
     overflow: hidden;
@@ -152,7 +153,7 @@ agora-menu {
     .mat-accordion {
         .mat-expansion-panel {
             box-shadow: none;
-            
+
 
             .mat-expansion-panel-header {
                 padding: 0 1rem;
@@ -162,7 +163,7 @@ agora-menu {
 
             .mat-expansion-panel-content {
                 box-shadow: none;
-                
+
                 .mat-expansion-panel-body {
                     padding: 0;
                     a {
