--- a/apps/angular/src/app/views/home/components/home/component.tns.html
+++ b/apps/angular/src/app/views/home/components/home/component.tns.html
@@ -1,6 +1,6 @@
 <GridLayout rows="auto,auto">
     <Button class="fa" text="Side Menu" (tap)="toggle()"></Button>
     <Label text="Side Menu" (click)="toggle()"></Label>
-    <Label class="h1 title" [text]="'home.title'"></Label>
-    <Label class="p description" textWrap="true" row="1" [text]="'home.description'"></Label>
+    <Label class="h1 title" [text]="'Home.Title' | translate"></Label>
+    <Label class="p description" textWrap="true" row="1" [text]="'Home.Description' | translate"></Label>
 </GridLayout>
