--- a/apps/angular/src/app/components/menu/components/menu/component.tns.scss
+++ b/apps/angular/src/app/components/menu/components/menu/component.tns.scss
@@ -6,3 +6,13 @@ StackLayout {
     line-height: $menuHeight;
     padding: 0 20;
 }
+
+.sideStackLayout {
+    background-color: gray;
+}
+
+.sideTitleStackLayout {
+    height: 56;
+    text-align: center;
+    vertical-align: center;
+}
