--- a/apps/angular/src/app/common/modules/logger/targets/notification/components/component.html
+++ b/apps/angular/src/app/common/modules/logger/targets/notification/components/component.html
@@ -3,4 +3,4 @@
         <mat-icon class="fa fa-{{data.icon}} fa-2x"></mat-icon>
     </mat-grid-tile>
     <mat-grid-tile colspan="3">{{data.message}}</mat-grid-tile>
-</mat-grid-list> -->
+</mat-grid-list>
